starting to rebuild the write book part of the website, moving it to a separate page from the book details, will probably find a new text editor too

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,6 +47,13 @@ p{
 
 }
 
+.chapterList{
+    color:black;
+}
+.chapterList:hover{
+    color:teal;
+}
+
 .card-size{
     height: 400px;
     width: auto;
