implemented new text editor, not finished yet, changed the layout for writing a chapter etc. ongoing process

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,6 +72,13 @@ p{
     width: 50%;
 }
 
+/*quill: */
+.ql-editor{
+    min-height:500px;
+}
+
+
+
 @media (min-width: 768px){ /*fix this later so they r one below the other*/
     .author-div{
         margin-bottom: 5%;
