--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,7 @@ a{
 }
 a:hover{
     color: #dd8585;
+    cursor: pointer;
 }
 
 li{
@@ -18,6 +19,7 @@ li{
 }
 li:hover{
     color: #dd8585;
+    cursor: pointer;
 }
 
 button{
@@ -122,6 +124,10 @@ h6{
     color: #eff9f0;
     font-family: 'Eczar', serif;
     font-size: 55px;
+    text-shadow: 1px 1px 5px #c97979;
+}
+.title-big:hover{
+    color: #eff9f0;
 }
 
 .title-link{ /* for a elements that should look like text, but with hover color */
