--- a/client/src/App.css
+++ b/client/src/App.css
@@ -123,7 +123,7 @@ h6{
 .title-big{
     color: #eff9f0;
     font-family: 'Eczar', serif;
-    font-size: 55px;
+    font-size: 3rem;
     text-shadow: 1px 1px 5px #c97979;
 }
 .title-big:hover{
