--- a/client/src/App.css
+++ b/client/src/App.css
@@ -182,9 +182,9 @@ p{
     max-width: 100%;
 }
 
-.btn-container{
+/* .btn-container{
     margin-bottom: 5%;
-}
+} */
 
 .cb-container{
     margin: 0 auto;
